[package]
name = "cxpool"
version = "0.1.0"
authors = ["zvkemp <zvkemp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
async-std = "0.99.9"

